--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Welcome to Docker Nginx Page</title>
+  <title>Welcome to Docker Nginx Page
 </head>
 
 <body>
   <h1>Hello from Shikha.</h1>
   
   <h2>This is sample page for my Capstone project. </h2>
+  
 </body>
 
-
+</html>
