--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Welcome to Docker Nginx Page
+  <title>Welcome to Docker Nginx Page</title>
 </head>
 
 <body>
